--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@google-cloud/aiplatform": "^3.34.0",
     "@google-cloud/storage": "^7.15.0",
-    "@langchain/core": "^0.3.27",
+    "@google/generative-ai": "^0.21.0",
+    "@langchain/core": "^0.3.30",
     "@langchain/google-vertexai": "^0.1.6",
     "@langchain/google-vertexai-web": "^0.1.6",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -32,7 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.2",
-    "langchain": "^0.3.10",
+    "langchain": "^0.3.11",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
