--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@upstash/ratelimit": "^2.0.5",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
     "ai": "^4.0.30",
     "axios": "^1.7.9",
