--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "recharts": "^2.15.0",
     "redis": "^4.7.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
